# clientpulse

./: .gitignore  README.md  render.yaml
backend/: .env.example  .gitignore  Makefile  README.md  atlas.hcl  pyproject.toml  schema.sql
backend/scripts/: create_db.sh
backend/src/: backfill_trend.py  bootstrap.py  populate.py  seed.py  seed_docs.py
backend/src/agents/: analyst.py  chat.py  guardrails.py  judge.py  schemas.py  specialists.py
backend/src/analysis/: chat.py  evaluate.py  runner.py
backend/src/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py  services.py
backend/src/db/: session.py
backend/src/ingestion/: vector_store.py
backend/src/llm/: config.py
backend/src/models/: __init__.py  account.py  action.py  analysis_run.py  base.py  document.py  health_score.py  signal.py  sla_metric.py
backend/tests/: conftest.py  test_api.py
docs/: AGENT_UPGRADE_PLAN.md  DEMO_SCRIPT.md  HACKATHON_SUBMISSION.md  PRD.md  UI_MOTION_PLAN.md  architecture_deployed.html  clientpulse_architecture_2026.html  clientpulse_clean_architecture.html  preview (1).html
frontend/: README.md  chat-showcase.html  package-lock.json  package.json  showcase.html  ui-showcase.html  vite.config.ts
frontend/.claude/: launch.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/chat-showcase/: ChatShowcase.tsx  main.tsx
frontend/src/hooks/: use-clientpulse.ts  use-is-dark.ts  use-theme.ts
frontend/src/lib/: api.ts  chart-theme.ts  format.ts
frontend/src/showcase/: ChartShowcase.tsx  data.ts  main.tsx
frontend/src/ui-showcase/: UiShowcase.tsx  (+1 more)
(+20 files in other folders)
