[project]
name = "clientpulse-backend"
version = "0.1.0"
description = "ClientPulse AI — backend DB + synthetic data"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "faker>=30.0",
    "python-dotenv>=1.0",
    "reportlab>=5.0.0",
    "python-docx>=1.2.0",
    "uvicorn[standard]>=0.34",
    "openai>=2.43.0",
    "openai-agents>=0.17.6",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
